chore: :zap: Update tokenizer pipeline - Add dataset and training tokenizer

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -339,10 +339,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\sulai\\Documents\\GH-Projects\\Tokenization\\env\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "ds = load_dataset(\"iohadrubin/wikitext-103-raw-v1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DatasetDict({\n",
+      "    train: Dataset({\n",
+      "        features: ['text'],\n",
+      "        num_rows: 29567\n",
+      "    })\n",
+      "    validation: Dataset({\n",
+      "        features: ['text'],\n",
+      "        num_rows: 60\n",
+      "    })\n",
+      "    test: Dataset({\n",
+      "        features: ['text'],\n",
+      "        num_rows: 62\n",
+      "    })\n",
+      "})\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from datasets import load_dataset\n",
+    "from tokenizers import BertWordPieceTokenizer\n",
+    "from tokenizers.trainers import WordPieceTrainer\n",
+    "import os\n",
+    "\n",
+    "# Load the dataset\n",
+    "dataset = load_dataset(\"iohadrubin/wikitext-103-raw-v1\")\n",
+    "\n",
+    "# Ensure the directory exists\n",
+    "os.makedirs(\"data/wikitext-103-raw\", exist_ok=True)\n",
+    "\n",
+    "# Save the dataset splits to text files\n",
+    "splits = [\"test\", \"train\", \"validation\"]\n",
+    "files = []\n",
+    "for split in splits:\n",
+    "    text_file = f\"data/wikitext-103-raw/wiki.{split}.raw\"\n",
+    "    with open(text_file, 'w', encoding='utf-8') as f:\n",
+    "        for line in dataset[split]['text']:\n",
+    "            f.write(line + '\\n')\n",
+    "    files.append(text_file)\n",
+    "\n",
+    "# Initialize the BertWordPieceTokenizer\n",
+    "bert_tokenizer = BertWordPieceTokenizer()\n",
+    "\n",
+    "# Train the tokenizer directly using parameters\n",
+    "bert_tokenizer.train(\n",
+    "    files,\n",
+    "    vocab_size=30522,\n",
+    "    special_tokens=[\"[UNK]\", \"[CLS]\", \"[SEP]\", \"[PAD]\", \"[MASK]\"]\n",
+    ")\n",
+    "\n",
+    "# Save the tokenizer\n",
+    "bert_tokenizer.save(\"data/bert-wiki.json\")\n",
+    "\n",
+    "print(\"Tokenizer training completed and saved to data/bert-wiki.json\")\n"
+   ]
   },
   {
    "cell_type": "code",
