chore: :zap: Update tokenizer pipeline - Test tokenizer after training!

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -391,7 +391,15 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokenizer training completed and saved to data/bert-wiki.json\n"
+     ]
+    }
+   ],
    "source": [
     "from datasets import load_dataset\n",
     "from tokenizers import BertWordPieceTokenizer\n",
@@ -429,6 +437,98 @@
     "\n",
     "print(\"Tokenizer training completed and saved to data/bert-wiki.json\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 9906, 11, 379, 65948, 0, 2650, 527, 499, 27623, 223, 949, 2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\"yer1~, takes&(\\r\\n Then.bind!D#'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = tokenizer.encode(\"Hello, y'all! How are you 😁 ?\")\n",
+    "print(output.ids)\n",
+    "# [1, 27253, 16, 93, 11, 5097, 5, 7961, 5112, 6218, 0, 35, 2]\n",
+    "tokenizer.decode([1, 27253, 16, 93, 11, 5097, 5, 7961, 5112, 6218, 0, 35, 2])\n",
+    "# \"Hello , y ' all ! How are you ?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['welcome', 'to', 'the', '[UNK]', 'token', '##izers', 'library', '.']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'welcome to the tokenizers library.'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = bert_tokenizer.encode(\"Welcome to the 🤗 Tokenizers library.\")\n",
+    "print(output.tokens)\n",
+    "# [\"[CLS]\", \"welcome\", \"to\", \"the\", \"[UNK]\", \"tok\", \"##eni\", \"##zer\", \"##s\", \"library\", \".\", \"[SEP]\"]\n",
+    "bert_tokenizer.decode(output.ids)\n",
+    "# \"welcome to the tok ##eni ##zer ##s library .\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'welcome to the tokenizers library.'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from tokenizers import decoders\n",
+    "bert_tokenizer.decoder = decoders.WordPiece()\n",
+    "bert_tokenizer.decode(output.ids)\n",
+    "# \"welcome to the tokenizers library.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
